--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "^0.1.4",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
