--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "multer": "^1.4.5-lts.1",
-    "cors":"^2.8.5"
+    "multer": "^1.4.5-lts.1"
   },  "devDependencies": {
     "concurrently": "^8.2.1",
     "dotenv": "^16.3.1",
